@@ -238,4 +238,5 @@
 	  the availability of TX data.
 	* Moved urgent data info into device structure.
 	* TCP and ICMP protocols can now be disabled.
+	* Added UDP test in examples/udp
 
